<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.mushishi</groupId>
  <artifactId>appiumstudy</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>appiumstudy</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
  	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.17</version>
	</dependency>
	  	<dependency>
		<groupId>dom4j</groupId>
		<artifactId>dom4j</artifactId>
		<version>1.6</version>
	</dependency>
		<dependency>
		  <groupId>io.appium</groupId>
		  <artifactId>java-client</artifactId>
		  <version>3.4.1</version>
	</dependency>
	<dependency>
		<groupId>javax.mail</groupId>
		<artifactId>mail</artifactId>
		<version>1.4.7</version>
	</dependency>
	<dependency>
		<groupId>org.apache.poi</groupId>
		<artifactId>poi</artifactId>
		<version>3.12</version>
	</dependency>
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi-ooxml</artifactId>
	    <version>3.12</version>
	</dependency>
	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>6.9.10</version>
		<!-- <scope>test</scope> -->
	</dependency>
	       <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<dependency>
		    <groupId>com.aventstack</groupId>
		    <artifactId>extentreports</artifactId>
		    <version>3.0.5</version>
		</dependency>
 	<dependency>
		<groupId>org.uncommons</groupId>
		<artifactId>reportng</artifactId>
		<version>1.1.4</version>
		<exclusions>
            <exclusion>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
            </exclusion>
        </exclusions>
	</dependency>
	<dependency>
		<groupId>com.google.inject</groupId>
		<artifactId>guice</artifactId>
		<version>4.0</version>
	</dependency>
	<dependency>
		<groupId>com.google.guava</groupId>
		<artifactId>guava</artifactId>
		<version>18.0</version>
	</dependency>
  </dependencies>
  <build>
  	<testSourceDirectory>src/main/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
      <plugins>
           <plugin>
               <!--定义编译版本  -->  
	            <groupId>org.apache.maven.plugins</groupId>  
	            <artifactId>maven-compiler-plugin</artifactId>  
	            <version>3.0</version>  
	            <configuration>  
	                <source>1.7</source>  
	                <target>1.7</target>  
	                <encoding>UTF-8</encoding>
	                <properties>
                        <property>
                            <name>usedefaultlisteners</name>
                            <value>false</value>
                        </property>
                        <property>
                            <name>listener</name>
                            <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
                        </property>
                    </properties>
                    <workingDirectory>target/</workingDirectory>
	            </configuration>  
          </plugin>
 	      <plugin>
	          	<!-- 定义testng文件 --> 
	          <groupId>org.apache.maven.plugins</groupId>
		      <artifactId>maven-surefire-plugin</artifactId>
		      <configuration> 
		      <argLine>-Dfile.encoding=UTF-8</argLine>
		      <argLine>-Xms1024m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
		      <forkMode>never</forkMode>
		          <suiteXmlFiles>
		              <suiteXmlFile>testng.xml</suiteXmlFile>
		          </suiteXmlFiles>
		      </configuration>
	   	  </plugin> 
	   	  <plugin>
	   	        <!--定义可执行打包类型及主类  --> 
		        <groupId>org.apache.maven.plugins</groupId>  
		        <artifactId>maven-jar-plugin</artifactId>  
		        <version>3.0.2</version>  
		        <configuration>  
		            <archive>
		                <manifest>  
		                    <mainClass>com.mushishi.appium.main.ExecMain</mainClass>  
		                </manifest>  
		                <!-- 用maven在MANIFEST.MF资料中的Class-Path中增加当前目录(.)  -->
                        <manifestEntries>
                           <Class-Path>.</Class-Path>
                        </manifestEntries>
		            </archive>  
		        </configuration>
      	   </plugin>
      </plugins>
  </build>
</project>
